--- a/assets/iconfont/demo_fontclass.html
+++ b/assets/iconfont/demo_fontclass.html
@@ -31,6 +31,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-warning"></i>
+                    <div class="name">YDUI-感叹号(空心)</div>
+                    <div class="fontclass">.icon-warning</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-phone"></i>
                     <div class="name">phone</div>
                     <div class="fontclass">.icon-phone</div>
