--- a/assets/iconfont/demo_symbol.html
+++ b/assets/iconfont/demo_symbol.html
@@ -53,6 +53,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-warning"></use>
+                    </svg>
+                    <div class="name">YDUI-感叹号(空心)</div>
+                    <div class="fontclass">#icon-warning</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-phone"></use>
                     </svg>
                     <div class="name">phone</div>
