--- a/assets/iconfont/demo_unicode.html
+++ b/assets/iconfont/demo_unicode.html
@@ -51,6 +51,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe687;</i>
+                    <div class="name">YDUI-感叹号(空心)</div>
+                    <div class="code">&amp;#xe687;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe682;</i>
                     <div class="name">phone</div>
                     <div class="code">&amp;#xe682;</div>
